# seriestracker

./: CMakeLists.txt  Database.cpp  Database.hpp  Film.cpp  Film.hpp  Interface.cpp  Interface.hpp  Piece.cpp  Piece.hpp  Pool.cpp  Pool.hpp  Ppv.cpp  Ppv.hpp  Series.cpp  Series.hpp  constants.hpp  main.cpp
